Fixed images on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -172,3 +172,8 @@ body {
     font-size: 18px !important;
     border-radius: 12px;
 }
+
+.responsive {
+    max-width: 100%;
+    height: auto;
+}
